<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scenario_execution_py_trees_ros</name>
  <version>1.2.0</version>
  <description>Fixes in py-trees-ros not yet release</description>
  <author>Intel Labs</author>
  <author email="fred-labs@mailbox.org">Frederik Pasch</author>
  <author email="florian.mirus@gmx.net">Florian Mirus</author>
  <maintainer email="fred-labs@mailbox.org">Frederik Pasch</maintainer>
  <maintainer email="florian.mirus@gmx.net">Florian Mirus</maintainer>
  <license>BSD-3-Clause</license>

  <exec_depend>py_trees_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
