<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>example_simulation</name>
  <version>1.0.0</version>
  <description>Simulation example for scenario execution</description>
  <author email="scenario-execution@intel.com">Intel Labs</author>
  <maintainer email="scenario-execution@intel.com">Intel Labs</maintainer>
  <license file="../../LICENSE">Apache-2.0</license>

  <depend>scenario_execution</depend>
  <depend>scenario_execution_rviz</depend>
  <depend>scenario_execution_gazebo</depend>
  <depend>gazebo_tf_publisher</depend>
  <depend>tb4_bringup</depend>
  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>

  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
