<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scenario_execution_x11</name>
  <version>1.3.0</version>
  <description>Scenario Execution library for X11</description>
  <author email="scenario-execution@intel.com">Intel Labs</author>
  <maintainer email="scenario-execution@intel.com">Intel Labs</maintainer>
  <license file="../../LICENSE">Apache-2.0</license>

  <depend>scenario_execution</depend>

  <exec_depend>ffmpeg</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
