<?xml version="1.0"?>
<package format="3">
  <name>message_modification</name>
  <version>1.3.0</version>
  <description>Modification of message data</description>
  <author>Intel Labs</author>
  <author email="fred-labs@mailbox.org">Frederik Pasch</author>
  <author email="florian.mirus@gmx.net">Florian Mirus</author>
  <maintainer email="fred-labs@mailbox.org">Frederik Pasch</maintainer>
  <maintainer email="florian.mirus@gmx.net">Florian Mirus</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>sensor_msgs</exec_depend>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
