<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scenario_status</name>
  <version>1.2.0</version>
  <description>
    Simple node to call a service to publish the py-trees-\
    behaviour tree to a topic, then subscribe to that topic and publish \
    changes in behaviour states as strings at the time they are \
    happening
  </description>
  <author email="scenario-execution@intel.com">Intel Labs</author>
  <maintainer email="scenario-execution@intel.com">Intel Labs</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>py_trees_ros_interfaces</depend>
  <depend>scenario_execution_interfaces</depend>
  <depend>rosgraph_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
