<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tf_to_pose_publisher</name>
  <version>1.2.1</version>
  <description>Publish a tf transform to a pose topic</description>
  <author>Intel Labs</author>
  <author email="fred-labs@mailbox.org">Frederik Pasch</author>
  <author email="florian.mirus@gmx.net">Florian Mirus</author>
  <maintainer email="fred-labs@mailbox.org">Frederik Pasch</maintainer>
  <maintainer email="florian.mirus@gmx.net">Florian Mirus</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
