<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_sim_scenario</name>
  <version>1.2.0</version>
  <description>Moveit2 Arm Simulation Scenario Execution</description>
  <author email="scenario-execution@intel.com">Intel Labs</author>
  <maintainer email="scenario-execution@intel.com">Intel Labs</maintainer>
  <license file="../../../LICENSE">Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- moveit2 -->
  <depend>moveit</depend>
  <depend>scenario_execution</depend>
  <depend>scenario_execution_moveit2</depend>
  <depend>moveit_resources</depend>
  <depend>controller_manager</depend>
  <depend>ompl</depend>
  <depend>moveit_planners_chomp</depend>
  <depend>gripper_controllers</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>ros2_control</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
